--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "homepage": "https://github.com/rawtxapp/chat-backend#readme",
   "devDependencies": {
     "typescript": "^3.3.4000"
+  },
+  "dependencies": {
+    "@types/express": "^4.16.1",
+    "express": "^4.16.4"
   }
 }
