--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "@types/express": "^4.16.1",
+    "@types/node-fetch": "^2.1.7",
     "@types/socket.io": "^2.1.2",
     "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
     "socket.io": "^2.2.0"
   }
 }
